DotBlue/tests/valid/ReturnSpacing_2.php
<?php

function foo() {
	if (TRUE) {
	}

	return 1;
}



function bar() {
	$a = 1;

	return 1;
}
