DotBlue/tests/invalid/OperatorsSpacing.NoSpace.php
<?php

$foo=1;
$foo+=1;
$foo-=1;
$foo/=1;
$foo*=1;
$foo%=1;
$foo=1+1;
$foo=1-1;
$foo=1/1;
$foo=1*1;
$foo=1%1;
$foo = TRUE==FALSE;
$foo = TRUE===FALSE;
$foo = 'a'.'b';
